Fix precommit issues