@@ -19,7 +19,6 @@ package org.apache.solr.cloud.api.collections;
 
 import static org.apache.solr.common.params.CollectionAdminParams.CALLING_LOCK_IDS_HEADER;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.params.CollectionParams;
@@ -99,7 +98,7 @@ public class AdminCmdContext {
 
   public static List<String> parseCallingLockIds(String callingLockIdsString) {
     if (StrUtils.isBlank(callingLockIdsString)) {
-      return Collections.emptyList();
+      return List.of();
     } else {
       return List.of(callingLockIdsString.split(","));
     }
